Javascript Funcionality Complete
All the core js it is done! Only basic html and 0 styling.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,35 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Weather Forecast</title>
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <!-- Main Styles -->
+    <link rel="stylesheet" href="stylesheets/css/style.css">
   </head>
   <body>
+    <h1><i id="city"></i> <small><i id="state"></i> l <i id="country"></i></small></h1>
+    <p>Current summary: <i id="cur_summary"></i></p>
+    <p>Precipitation Intensity: <i id="cur_precip_intensity"></i></p>
+    <p>Precipitation Probability: <i id="cur_precip_probability"></i></p>
+    <p>Current temperature: <i id="cur_temp"></i></p>
+    <p>Current apparent temperature: <i id="cur_apparent_temp"></i></p>
+    <p>Humidity: <i id="cur_humidity"></i></p>
+    <p>Wind Speed: <i id="cur_wind_speed"></i></p>
+    <p>Wind Bearing: <i id="cur_wind_bearing"></i></p>
+    <p>Cloud Cover: <i id="cur_cloud_cover"></i></p>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <!-- Functions -->
+    <!-- <script src="js/functions.js" charset="utf-8"></script> -->
+    <!-- Scripts -->
+    <script src="js/scripts.js" charset="utf-8"></script>
   </body>
 </html>
