--- a/index.html
+++ b/index.html
@@ -13,22 +13,44 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <!-- Weather Icons -->
     <link rel="stylesheet" href="libs/weather-icons/css/weather-icons.css">
+    <!-- Raleway Font -->
+    <link href='https://fonts.googleapis.com/css?family=Raleway:100,200,700,500' rel='stylesheet' type='text/css'>
     <!-- Main Styles -->
     <link rel="stylesheet" href="stylesheets/css/style.css">
   </head>
   <body>
-    <div class="container">
-      <h1><i id="city"></i> <small><i id="state"></i> l <i id="country"></i></small></h1>
-
-      <p id="icon"><i id="cur_icon" class="wi"></i></p>
-      <p><i id="cur_summary"></i></p>
-      <p>Precipitation Probability: <i id="cur_precip_probability"></i></p>
-      <p>Current temperature: <i id="cur_temp"></i></p>
-      <p>Current apparent temperature: <i id="cur_apparent_temp"></i></p>
-      <p>Humidity: <i id="cur_humidity"></i></p>
-      <p>Wind Speed: <i id="cur_wind_speed"></i></p>
-      <p>Wind Bearing: <i id="cur_wind_bearing"></i></p>
-      <p>Cloud Cover: <i id="cur_cloud_cover"></i></p>
+    <div class="container-fluid">
+      <div class="col-sm-6 bg-image">
+        <h1><i id="city"></i>, <small><i id="state"></i> - <i id="country"></i></small></h1>
+        <footer>
+          <div class="col-sm-6">
+            <i id="cur_icon" class="wi"></i>
+          </div>
+          <div class="col-sm-6 text-center">
+            <i id="cur_temp"></i> <i class="unit">ºF</i> <br>
+            <i id="hours_summary"></i>
+          </div>
+        </footer>
+        <div id="white_quarter_circle"></div>
+      </div>
+      <div class="col-sm-6 bg-color text-center">
+        <div class="daily_temperatures clearfix">
+          <div class="col-sm-6">
+            <i id="day_max"></i> <i class="unit">ºF</i> <br>
+          </div>
+          <div class="col-sm-6">
+            <i id="day_min"></i> <i class="unit">ºF</i> <br>
+          </div>
+        </div>
+        <p>Precipitation Probability: <i id="cur_precip_probability"></i></p>
+        <p>Humidity: <i id="cur_humidity"></i></p>
+        <p>Wind Speed: <i id="cur_wind_speed"></i></p>
+        <p>Wind Bearing: <i id="cur_wind_bearing"></i></p>
+        <p>Cloud Cover: <i id="cur_cloud_cover"></i></p>
+        <p id="icon">Next Days: <br>
+          <span class="col-sm-2 col-sm-offset-1"><i id="days_icon" class="wi"></i></span>
+          <span class="col-sm-8"><i id="days_summary"></i></span></p>
+      </div>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -36,7 +58,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <!-- Functions -->
-    <script src="js/functions.js"></script>
+    <!-- <script src="js/functions.js"></script> -->
     <!-- Scripts -->
     <script src="js/scripts.js"></script>
   </body>
